--- a/pobrehub/templates/home.html
+++ b/pobrehub/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Instagram Clone - Desktop Dark</title>
+  <title>Rede social</title>
   <link rel="stylesheet" href="/static/styles.css" />
 </head>
 <body>
@@ -12,28 +12,55 @@
 
     <!-- Sidebar Lateral -->
     <aside class="sidebar">
-      <div class="logo">📸</div>
+      
       <nav class="nav-links">
-        <a href="#">🏠 Início</a>
-        <a href="#">🔍 Buscar</a>
-        <a href="#">🎥 Reels</a>
-        <a href="#">✉️ Mensagens</a>
-        <a href="#">❤️ Notificações</a>
-        <a href="#">➕ Criar</a>
-        <a href="#">👤 Perfil</a>
+        <div class="opcoes">
+          <div class="logo">📸</div>
+          <a href="/home">🏠 Início</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <a href="/buscar">🔍 Buscar</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <a href="/mensagens">✉️ Mensagens</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <a href="/notificacoes">❤️ Notificações</a>
+          <br>
+          <br>
+          <br>
+          <br>
+          <a href="/criar">➕ Criar</a>
+          <br>
+          <br>
+          <br>
+          
+          <a href="/perfil">👤 Perfil</a>
+        </div>
+        
       </nav>
     </aside>
 
     <!-- Conteúdo Principal -->
     <main class="main-content">
       <!-- Stories -->
-      <section class="stories">
+
+      <div class="storyes">
+        <section class="stories">
         <div class="story">Você</div>
         <div class="story">Ana</div>
         <div class="story">Lucas</div>
         <div class="story">Mari</div>
         <div class="story">Pedro</div>
       </section>
+      </div>
+      
 
       <!-- Postagens -->
       <section class="posts">
