--- a/pobrehub/templates/index.html
+++ b/pobrehub/templates/index.html
@@ -29,7 +29,7 @@
         <h2>Cadastrar</h2>
         <input type="nome" name="nome" placeholder="Nome completo">
         <input type="email" name="email" placeholder="E-mail">
-        <input type="senha" name="senha" placeholder="Senha">
+        <input type="password" name="senha" placeholder="Senha">
         <button>Cadastrar</button>
         <div class="toggle-link" onclick="showLogin()">Já tem conta? Faça login</div>
         </div>
