--- a/pobrehub/templates/criar.html
+++ b/pobrehub/templates/criar.html
@@ -14,9 +14,9 @@
             <br>
             <input type='radio' id='metodo' name="metodo" value="B">postagem</h3>
             <br>
-            <input type='imagem' id='imagem' name='imagem' placeholder="Digite a imagem">
+            <input type='text' id='imagem' name='imagem' placeholder="Digite a imagem">
             <br>
-            <input type='descricao' id='descricao' name='descricao' placeholder="Digite a descricao">
+            <input type='text' id='descricao' name='descricao' placeholder="Digite a descricao">
             
             <button type="submit">enviar</button>
             
