--- a/pobrehub/templates/mensagens.html
+++ b/pobrehub/templates/mensagens.html
@@ -6,6 +6,40 @@
   <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
+  
+  <aside class="sidebar">
+      
+    <nav class="nav-links">
+      <div class="opcoes">
+        <div class="logo">📸</div>
+        <a href="/home">🏠 Início</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/buscar">🔍 Buscar</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/mensagens">✉️ Mensagens</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/notificacoes">❤️ Notificações</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/criar">➕ Criar</a>
+        <br>
+        <a href="/perfil">👤 Perfil</a>
+      </div>
+      
+    </nav>
+  </aside>
+
   <div class="mensagens-container">
     <header class="topo">
       <h1>📨 Mensagens</h1>
