--- a/pobrehub/templates/criar.html
+++ b/pobrehub/templates/criar.html
@@ -15,12 +15,12 @@
                 <h3 class="form-subtitle">Tipo de Conteúdo:</h3>
                 <div class="radio-group">
                     <label class="radio-label">
-                        <input type="radio" name="metodo" value="A" checked>
+                        <input type="radio" name="metodo" value="Patrocínio" checked>
                         <span class="radio-custom"></span>
                         Patrocínio
                     </label>
                     <label class="radio-label">
-                        <input type="radio" name="metodo" value="B">
+                        <input type="radio" name="metodo" value="Postagem">
                         <span class="radio-custom"></span>
                         Postagem
                     </label>
