--- a/pobrehub/templates/home.html
+++ b/pobrehub/templates/home.html
@@ -48,34 +48,40 @@
     <main class="main-content">
       <!-- Stories -->
 
-      <div class="storyes">
-        <section class="stories">
+      <section class="stories">
         <div class="story">Você</div>
         <div class="story">Ana</div>
         <div class="story">Lucas</div>
         <div class="story">Mari</div>
         <div class="story">Pedro</div>
       </section>
-      </div>
       
+      <!-- Adicione mais se quiser -->
 
-      <!-- Postagens -->
-      <section class="posts">
-        {% for post in postagem %}
-        <div class="posts">
-            {% if post[1] %}
-                <img src="{{ post[1] }}" class="cover" alt="posts">
-            {% else %}
-                <img src="https://img.freepik.com/fotos-gratis/firewall-de-dados-em-preto-branco-de-notebook_1150-1733.jpg" class="post" alt="post">
-            {% endif %}
-            <h3>{{ post[2] }}</h3>
-            <div class="botoes">
-                <input type='radio' name="like" value="like"> Like
-                <input type='radio' name="dislike" value="dislike"> Dislike
-            </div>
-        </div>
-        {% endfor %}
-    </section>
+
+        
+
+        <!-- Postagens -->
+        <section class="posts">
+          {% for post in postagem %}
+          <div class="post">
+              {% if post[1] %}
+                  <img src="{{ post[1] }}" class="cover" alt="posts">
+              {% else %}
+                  <img src="https://img.freepik.com/fotos-gratis/firewall-de-dados-em-preto-branco-de-notebook_1150-1733.jpg" class="post" alt="post">
+              {% endif %}
+              <h3>{{ post[2] }}</h3>
+              <div class="botoes">
+                <label>
+                  <input type="radio" name="like" value="like" checked> Like
+                </label>
+                <label>
+                  <input type="radio" name="like" value="deslike" checked> Deslike
+                </label>
+              </div>
+          </div>
+          {% endfor %}
+        </section>
           
     </main>
 
