--- a/pobrehub/templates/criar.html
+++ b/pobrehub/templates/criar.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
+
+    <aside class="sidebar">
+      
+        <nav class="nav-links">
+          <div class="opcoes">
+            <div class="logo">📸</div>
+            <a href="/home">🏠 Início</a>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="/buscar">🔍 Buscar</a>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="/mensagens">✉️ Mensagens</a>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="/notificacoes">❤️ Notificações</a>
+            <br>
+            <a href="/criar">➕ Criar</a>
+            <br>
+            <a href="/perfil">👤 Perfil</a>
+            <br>
+            <a href="/logout">🚪 Sair</a>
+          </div>
+          
+        </nav>
+      </aside>
+
+      
     <div class="create-container">
         <h1 class="create-title">📝 Criar Nova Postagem</h1>
         
