--- a/pobrehub/templates/perfil.html
+++ b/pobrehub/templates/perfil.html
@@ -28,16 +28,16 @@
         <br>
         <a href="/notificacoes">❤️ Notificações</a>
         <br>
-        <br>
-        <br>
-        <br>
         <a href="/criar">➕ Criar</a>
         <br>
         <a href="/perfil">👤 Perfil</a>
+        <br>
+        <a href="/logout">🚪 Sair</a>
       </div>
       
     </nav>
   </aside>
+
   <div class="perfil-container">
     <header class="perfil-topo">
       <img src="https://via.placeholder.com/100" alt="Foto de perfil" class="foto-perfil">
