--- a/pobrehub/templates/notificacoes.html
+++ b/pobrehub/templates/notificacoes.html
@@ -29,16 +29,16 @@
         <br>
         <a href="/notificacoes">❤️ Notificações</a>
         <br>
-        <br>
-        <br>
-        <br>
         <a href="/criar">➕ Criar</a>
         <br>
         <a href="/perfil">👤 Perfil</a>
+        <br>
+        <a href="/logout">🚪 Sair</a>
       </div>
       
     </nav>
   </aside>
+
 
   
   <div class="notificacoes-container">
