--- a/pobrehub/templates/perfil_usuario.html
+++ b/pobrehub/templates/perfil_usuario.html
@@ -8,38 +8,38 @@
 </head>
 <body>
 
-    <aside class="sidebar">
+  <aside class="sidebar">
       
-        <nav class="nav-links">
-          <div class="opcoes">
-            <div class="logo">📸</div>
-            <a href="/home">🏠 Início</a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <a href="/buscar">🔍 Buscar</a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <a href="/mensagens">✉️ Mensagens</a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <a href="/notificacoes">❤️ Notificações</a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <a href="/criar">➕ Criar</a>
-            <br>
-            <a href="/perfil">👤 Perfil</a>
-          </div>
-          
-        </nav>
-      </aside>
+    <nav class="nav-links">
+      <div class="opcoes">
+        <div class="logo">📸</div>
+        <a href="/home">🏠 Início</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/buscar">🔍 Buscar</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/mensagens">✉️ Mensagens</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="/notificacoes">❤️ Notificações</a>
+        <br>
+        <a href="/criar">➕ Criar</a>
+        <br>
+        <a href="/perfil">👤 Perfil</a>
+        <br>
+        <a href="/logout">🚪 Sair</a>
+      </div>
+      
+    </nav>
+  </aside>
+
 
   <div class="perfil-container">
     <div class="perfil-header">
