muita coisa nova

--- a/pobrehub/static/styles.css
+++ b/pobrehub/static/styles.css
@@ -672,6 +672,9 @@ button:hover {
 .bot:hover {
   background-color: #a00000; /* tom mais claro ao passar o mouse */
 }
+.buttom2{
+  color: #262626;
+}
 
 
 
