--- a/pobrehub/templates/perfil.html
+++ b/pobrehub/templates/perfil.html
@@ -30,26 +30,31 @@
         <br>
         <a href="/criar">➕ Criar</a>
         <br>
-        <a href="/perfil">👤 Perfil</a>
-        <br>
         <a href="/logout">🚪 Sair</a>
       </div>
       
     </nav>
   </aside>
 
+  
   <div class="perfil-container">
     <header class="perfil-topo">
       <img src="https://via.placeholder.com/100" alt="Foto de perfil" class="foto-perfil">
       <div class="info-usuario">
-        <h2>@Rodrigo_massa</h2>
-        <p>CEO do PobreHUB</p>
-        <div class="estatisticas">
-          <div><strong>128</strong><span>Publicações</span></div>
-          <div><strong>4.302</strong><span>Seguidores</span></div>
-          <div><strong>321</strong><span>Seguindo</span></div>
-        </div>
-        <button class="btn-editar">Editar Perfil</button>
+          <h2>{{perfil.nome}}</h2>
+          <p>CEO do PobreHUB</p>
+          <div class="estatisticas">
+            <div><strong>128</strong><span>Publicações</span></div>
+            <div><strong>4.302</strong><span>Seguidores</span></div>
+            <div><strong>321</strong><span>Seguindo</span></div>
+          </div>
+
+          {% if agua == True %}
+            <a href="/editar_perfil">
+              <button class="btn-editar">Editar Perfil</button>
+            </a>
+          {%endif%}
+        
       </div>
     </header>
 </body>
