--- a/pobrehub/static/styles.css
+++ b/pobrehub/static/styles.css
@@ -30,13 +30,13 @@ body {
   left: 0;
   top: 0;
   height: 100vh;
-  width: 100px;
+  width: 200px;
   background-color: #000;
   border-right: 1px solid #262626;
   padding: 20px 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   z-index: 1000; /* Garante que fique acima de outros elementos */
 }
 
