--- a/pobrehub/static/styles.css
+++ b/pobrehub/static/styles.css
@@ -497,9 +497,13 @@ body, html {
 }
 
 .perfil-topo {
+  position: absolute;
+  top: 0;
+  left: 200px;
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  margin: 0;
+  padding: 10px; /* opcional, só pra não colar demais */
 }
 
 .foto-perfil {
@@ -675,6 +679,47 @@ button:hover {
 .buttom2{
   color: #262626;
 }
+.perfil-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.foto-perfil {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.estatisticas {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 400px;
+  margin-top: 10px;
+}
+
+.imagens-postagem {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.imagens-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.imagem-postada {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
 
 
 
