--- a/pobrehub/static/styles.css
+++ b/pobrehub/static/styles.css
@@ -751,6 +751,21 @@ button:hover {
 .botoes label:hover {
   background-color: #f3e6eb;
 }
+.btn-seguir {
+  background-color: #008CBA;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-parar-seguir {
+  background-color: #f44336;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+}
 
 
 
